@@ -105,7 +105,7 @@
   <option value="nwbox/nwmatcher/src/nwmatcher.js">NWMatcher</option>
   <option value="peppy/peppy.js">Peppy</option>
   <option value="sizzle/sizzle.js">Sizzle</option>
-  <option value="slick/Slick.Parser.js+slick/Slick.Finder.js">Slick</option>
+  <option value="slick/Source/Slick.Parser.js+slick/Source/Slick.Finder.js">Slick</option>
   <option value="sly/Sly.js">Sly</option>
 </select>
 </span>
