@@ -1,3 +1,5 @@
+* Update selector engine adapters to use the build system's //= require command. [Diego Perini, jddalton, Tobie Langel]
+
 * Make internal getNodeName() check for browsers that have case-sensitive nodeNames for unknown elements. [jddalton, Diego Perini]
 
 * Add fuse.dom.Element.fromTagName(). [jddalton]
